fix: layout issue with product details link

--- a/src/client/src/views/product-details/ProductDetailsContent.css
+++ b/src/client/src/views/product-details/ProductDetailsContent.css
@@ -63,3 +63,6 @@
     width: 75%;
 }
 
+.product-details .beer-finder {
+    padding-left: 0;
+}
